--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Bhaskar Dixit</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">Full Stack Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>5+ years <br />Full Stack Development</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +100,13 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>B.E. Computer Science Bachelors Degree<br />Mumbai University</p>
+              <p>B.E. Computer Science Bachelors Degree<br />Mumbai University</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Seasoned, forward-looking Software Engineer with 5+ years' background in creating and executing innovative software solutions to enhance business productivity. Reliable team player offering exceptional analytical and problem management skills and the important ability to think critically and solve complex problems. Consistently recognized as a hands-on and competent leader, skilled at coordinating cross-functional teams in a fast-paced, deadline-driven environment to steer timely project completion within budgetary constraints.
             </p>
           </div>
         </div>
@@ -375,7 +371,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Bhaskar Dixit. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
